--- a/css/editor-area-styles.css
+++ b/css/editor-area-styles.css
@@ -184,8 +184,8 @@ h6 {
 hr {
 	height: 2px;
 	padding: 0;
-	margin-top: 1.5em;
-	margin-bottom: 1.5em;
+	margin-top: 1.6em; /* This will give same line height as regular lines for above line */
+	margin-bottom: 1.86em; /* This will give same line height as regular lines for below line */
 	background-color: var(--horizontal-line-color);
 	border: 0 none;
 	overflow: hidden;
