--- a/css/editor-area-styles.css
+++ b/css/editor-area-styles.css
@@ -285,7 +285,7 @@ table tr th:last-child {
 /* Make images always 100% width */
 img {
 	max-width: 100%;
-	max-height: 100%;
+	height: auto;
 }
 
 /* Disable TinyMCE active color outline/background for links, tables, and images */
