--- a/libs/easymde.css
+++ b/libs/easymde.css
@@ -553,7 +553,10 @@ span.CodeMirror-selectedtext {
   border: 0px solid transparent !important;
   border-bottom-left-radius: 4px !important;
   border-bottom-right-radius: 4px !important;
-  padding: 10px !important;
+  padding-top: 30px !important;
+  padding-bottom: 30px !important;
+  padding-left: 30px !important;
+  padding-right: 30px !important;
   /*font: inherit !important;*/
   z-index: 0 !important;
   word-wrap: break-word !important;
