--- a/css/editor-area-styles.css
+++ b/css/editor-area-styles.css
@@ -5,7 +5,8 @@
 	--blockquote-left-border-color: rgb(221, 221, 221);
 	--code-background-color: rgba(27, 31, 35, 0.05);
 
-	--general-text-color: rgb(92, 89, 98);
+	/*--general-text-color: rgb(92, 89, 98);*/
+	--general-text-color: rgb(50, 50, 50);
 	/* --link-color: rgb(129, 83, 237) */ /* Purple */
 	--link-color: rgb(8, 122, 204);
 	--link-underline-gradient-color: rgb(238, 235, 238);
