--- a/css/editor-styles.css
+++ b/css/editor-styles.css
@@ -27,13 +27,13 @@
 
 /* Set colors for dark theme */
 [data-theme='dark'] {
-	--general-background-color: rgb(33, 33, 33);
+	--general-background-color: rgb(38, 38, 38) !important;
 	--lesser-background-color: rgb(44, 44, 44);
 	--backdrop-background-color: rgb(33, 33, 33, 0.95);
 	--dialogue-box-background-color: rgb(38, 38, 38);
 	--text-area-background-color: rgb(53, 53, 53);
 
-	--general-text-color: rgb(250, 250, 250);
+	--general-text-color: rgb(250, 250, 250) !important;
 	--lesser-text-color: rgb(209, 209, 209);
 	--much-lesser-text-color: rgb(140, 140, 140);
 	--link-color: rgb(150, 215, 255);
@@ -47,9 +47,9 @@
 
 	--checked-check-box-fill-color: var(--link-color);
 
-	--scrollbar-track-color: var(--lesser-background-color);
-	--scrollbar-thumb-color: rgb(33, 33, 33);
-	--scrollbar-track-hover-color: rgb(53, 53, 53);
+	--scrollbar-track-color: var(--lesser-background-color) !important;
+	--scrollbar-thumb-color: rgb(33, 33, 33) !important;
+	--scrollbar-track-hover-color: rgb(53, 53, 53) !important;
 }
 
 /* Basic editor configuration */
