Hover color improvement

--- a/css/editor-styles.css
+++ b/css/editor-styles.css
@@ -251,7 +251,7 @@
 
 	--inline-pop-top-color: var(--general-background-color);
 
-	--menu-item-button-hover-color: rgb(73, 73, 73);
+	--menu-item-button-hover-color: #161b22;
 
 	--checked-check-box-fill-color: var(--link-color);
 
